# SONG-DAQ

./: .env.example  .gitignore  README.md  next.config.js  package-lock.json  package.json  render.yaml  tailwind.config.ts  tsconfig.tsbuildinfo
.claude/: launch.json
anchor/: Anchor.toml  Cargo.toml
anchor/programs/song-daq/: Cargo.toml
anchor/programs/song-daq/src/: errors.rs  events.rs  lib.rs  math.rs  state.rs
docs/: PRODUCTION_ROLLOUT.md
prisma/: dev.db  schema.prisma  seed.ts
scripts/: render-build.mjs  smoke.mjs
src/app/: error.tsx  globals.css  layout.tsx  manifest.ts  opengraph-image.tsx  page.tsx  robots.ts  sitemap.ts
src/components/: AdminConsole.tsx  ArtistDashboard.tsx  ArtistIntel.tsx  AssetSourceBadges.tsx  AudiencePlaylist.tsx  AudiusAutoShuffle.tsx  AudiusLoginButton.tsx  CoinCard.tsx  CoinLauncher.tsx  CoinPreviewModal.tsx  CoinTradeModal.tsx  CommandPalette.tsx  CurrencySelector.tsx  DiscoveryEngine.tsx  GamificationLayer.tsx  GamifiedSignalsPage.tsx  GlobalPlayer.tsx  HeatMap.tsx  HiddenAdminAccess.tsx  InfoBanner.tsx  InteractionFeedback.tsx  LandingPage.tsx  LiveTradingStatusBanner.tsx  LocalTimeToggle.tsx  LoginModal.tsx  MarketIntelligence.tsx  MarketTicker.tsx  Navbar.tsx  NewsFeed.tsx  PaperModeFrame.tsx  PriceChart.tsx  ReportModal.tsx  RiskBadge.tsx  RoleToggle.tsx  RoyaltyConfigEditor.tsx  SafeImage.tsx  Skeleton.tsx  SongCard.tsx  Sparkline.tsx  SupportPage.tsx  (+9 more)
src/lib/: adminIdentity.ts  adminSession.ts  api.ts  appMode.ts  artistIntel.ts  assetSource.ts  assetState.ts  audius.ts  audiusArtwork.ts  audiusCoins.ts  auth.ts  (+33 more)
(+78 files in other folders)
