[package]
name = "song-daq"
version = "0.1.0"
description = "Song DAQ — unified IPO + bonding curve + royalty program"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "song_daq"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.30.1"
anchor-spl = "0.30.1"
